[tool.poetry]
name = "compyle"
version = "0.1.0-alpha.1"
description = "Twitch Compyle is an app that allows you to create Youtube compilations of the latest Twitch clips on your favorite games."
authors = ["amaurylrd <amaurylrd@users.noreply.github.com>"]

repository = "https://github.com/amaurylrd/twitch_compyle"
documentation = "https://google.com"
packages = [{include = "compyle"}]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "License :: Other/Proprietary License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Unix",
]

[tool.poetry.dependencies]
python = "~3.10"
python-semantic-release = "^8.0.0"
python-dotenv = "^1.0.0"

django = ">=5.2,<5.3"
djangorestframework = "^3.16"
django-admin-action-tools = "^1.2.0"
django-cors-headers = "^4.0.0"
django-filter = "^2.4.0"
django-object-actions = "^4.2"

psycopg2 = "^2.9.10"
psycopg2-binary = "^2.9.10"

# celery = "^5.4"
# cachetools = "^5.5.0"
# cryptography = "^42.0.0"
# toml = "^0.10.2"
# tomli = "^2.0.1"
# gunicorn = "^23.0.0"
# setuptools = "^74.1.2"


[tool.poetry.group.tools]
optional = true

[tool.poetry.group.pre-commit.dependencies]
pre-commit = "^3.1"

[tool.poetry.group.lint.dependencies]
mypy = "^1.11.2"
black = "^24.0.0"

[tool.poetry.group.tools.dependencies]
black = "^24.0.0"
pyupgrade = "^3.3.1"

[tool.isort]
profile = "black"
known_first_party = "compyle"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.2.0"]
